# ChangeLog for sys-devel/gdb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.198 2011/12/29 18:48:27 jer Exp $

  29 Dec 2011; Jeroen Roovers <jer@gentoo.org> gdb-7.3.1.ebuild:
  Stable for HPPA (bug #395017).

  23 Dec 2011; Matt Turner <mattst88@gentoo.org> gdb-7.3.1.ebuild:
  alpha stable, bug #395017.

  22 Dec 2011; Markus Meier <maekke@gentoo.org> gdb-7.3.1.ebuild:
  arm stable, bug #395017

  21 Dec 2011; Fabian Groffen <grobian@gentoo.org> gdb-7.3.1.ebuild:
  Add Prefix keywords

  18 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gdb-7.3.1.ebuild:
  Stable for AMD64, wrt bug #395017

  08 Dec 2011; Mike Frysinger <vapier@gentoo.org> gdb-7.3.1.ebuild:
  Add patch from upstream for x32 support.

  02 Dec 2011; Mike Frysinger <vapier@gentoo.org> gdb-7.3.1.ebuild,
  gdb-9999.ebuild, metadata.xml:
  Enable python support by default #386141 by Ben Longbons.

*gdb-7.3.1 (07 Sep 2011)

  07 Sep 2011; Mike Frysinger <vapier@gentoo.org> +gdb-7.3.1.ebuild,
  gdb-9999.ebuild:
  Version bump and sync live ebuilds with release.

  03 Sep 2011; Fabian Groffen <grobian@gentoo.org> gdb-7.2.ebuild,
  gdb-7.3.ebuild, gdb-9999.ebuild:
  Fixed Prefix support, and marked ~x86-macos and ~x64-macos

  23 Aug 2011; Mike Frysinger <vapier@gentoo.org> gdb-7.3.ebuild,
  gdb-9999.ebuild:
  Set EGIT vars before we inherit the git eclass.

  22 Aug 2011; Mike Frysinger <vapier@gentoo.org> gdb-7.3.ebuild,
  gdb-9999.ebuild:
  Use /usr/lib/debug as the separate debug dir since everything else atm
  assumes that canonical location #378537 by Michał Górny.

*gdb-9999 (13 Aug 2011)

  13 Aug 2011; Mike Frysinger <vapier@gentoo.org> gdb-7.3.ebuild,
  +gdb-9999.ebuild:
  Add support for live git trees, and merge the different versions we have for
  fedora/weekly snapshots.

  13 Aug 2011; Mike Frysinger <vapier@gentoo.org> gdb-7.2.ebuild,
  gdb-7.3.ebuild:
  Depend on yacc for build.

*gdb-7.3 (07 Aug 2011)
