@@ -3,7 +3,9 @@
 <pkgmetadata>
 <herd>toolchain</herd>
 <use>
+ <flag name='client'>Install the main "gdb" program (most people want this)</flag>
  <flag name='multitarget'>Support all known targets in one gdb binary</flag>
  <flag name='python'>Enable support for the new internal scripting language, as well as extended pretty printers</flag>
+ <flag name='server'>Install the "gdbserver" program (useful for embedded/remote targets)</flag>
 </use>
 </pkgmetadata>
